--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,13 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/financial-saathi.css">
   </head>
 
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="%PUBLIC_URL%/financial-saathi.js"></script>
   </body>
 </html>
